Fixed awkward gap

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -18,7 +18,7 @@
 #nav-bar {
 	order: 0;
 	border: none !important;
-	padding: 12px 0 11px 88px !important;
+	padding: 12px 0 11px 0px !important;
 	background-color: transparent !important;
 }
 
